<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/lblProductDetailsSeller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textColor="@color/colorDarkLiver"
            android:textStyle="italic|bold"
            android:layout_marginTop="@dimen/margin_8"/>

        <TextView
            android:id="@+id/lblProductDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_26"
            android:textColor="@color/colorRichBlack"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_below="@+id/lblProductDetailsSeller"
            />

        <ImageView
            android:id="@+id/ProductDetailsPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:minWidth="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/imgProductDescription"
            android:layout_below="@+id/lblProductDetailsTitle"
            />

        <ProgressBar
            android:id="@+id/ProductDetailsprogressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_28"
            android:contentDescription="@string/app_name"
            android:layout_below="@id/ProductDetailsPicture"
            android:layout_alignTop="@id/ProductDetailsPicture"/>

        <TextView
            android:id="@+id/lblProductDetailsPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProductDetailsPicture"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_28"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/margin_28"
            android:layout_marginBottom="@dimen/margin_16"
            android:maxLines="10"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_26"
            android:textColor="@color/colorRichBlack"
            />

        <LinearLayout
            android:id="@+id/labelsDetails"
            android:layout_below="@+id/lblProductDetailsPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblproductDetailsFreeShipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16"
                android:textColor="@color/colorGreenRYB"
                android:layout_marginTop="@dimen/margin_8"
                android:textStyle="italic|bold"/>

            <TextView
                android:id="@+id/lblproductDetailsMercadoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16"
                android:textColor="@color/colorPearlyPurple"
                android:layout_marginTop="@dimen/margin_8"
                android:textStyle="bold|italic"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/productDetailButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/labelsDetails"
            android:weightSum="2"
            android:padding="@dimen/margin_16">

            <Button
                android:id="@+id/btnIrMercadoLibre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="@drawable/custom_button_background"
                android:text="@string/btnTxtIrMeli"
                android:textColor="@color/colorBlackShadows"/>
            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@drawable/custom_button_background"
                android:text="@string/btnTxtVolver"
                android:textColor="@color/colorBlackShadows"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerProductAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDetailButtons"/>

        <TextView
            android:padding="@dimen/margin_16"
            android:id="@+id/titleConsejos"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_26"
            android:textColor="@color/colorRichBlack"
            android:layout_below="@id/recyclerProductAttributes"
            android:text="@string/lblConsejosSeguridad"/>

        <TextView
            android:id="@+id/lblConsejo1"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textColor="@color/colorRichBlack"
            android:layout_below="@id/titleConsejos"
            android:text="@string/lblConsejo1"/>

        <TextView
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textColor="@color/colorRichBlack"
            android:layout_below="@id/lblConsejo1"
            android:text="@string/lblConsejo2"/>


    </RelativeLayout>

</ScrollView>