<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
            android:background="@color/colorMiddleYellow"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mercado_libre_logo"
                android:padding="@dimen/margin_8"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            />

        <LinearLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
            android:layout_marginTop="@dimen/margin_28"
            android:padding="@dimen/margin_16"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_26"
                android:textColor="@color/colorRoyalBlueDark"
                android:textStyle="italic|bold"
                android:text="@string/lblSearch"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_28"
                    android:layout_marginEnd="@dimen/margin_28"
                    android:hint="@string/hntSearch"
                    android:autofillHints=""
                    android:inputType="text" />
                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_search"
                    android:background="@null"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_alignTop="@+id/txtSearch"
                    android:layout_alignEnd="@+id/txtSearch"
                    android:layout_alignBottom="@+id/txtSearch"
                    android:contentDescription="@string/btnSearchDescription"
                    />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/promotionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer"
            android:layout_marginTop="@dimen/margin_16"
            android:padding="@dimen/margin_16"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_26"
                android:textColor="@color/colorRoyalBlueDark"
                android:textStyle="italic|bold"
                android:text="@string/lblPromotions"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_28">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryCelulares"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryCelulares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ProgressBar
                    android:id="@+id/progressBarCategoryCelulares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_28"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_28">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryComputacion"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryComputacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <ProgressBar
                    android:id="@+id/progressBarCategoryComputacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_28"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_28">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryDeportes"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryDeportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <ProgressBar
                    android:id="@+id/progressBarCategoryDeportes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_28"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>