<resources>
    <string name="app_name">Mercado Mobile</string>


    <!-- PopUp Texts -->
    <string name="txtLoading">Cargando Resultados</string>
    <string name="toastEmptySearchQuery">Por favor ingrese un texto para buscar</string>

    <!-- Button Texts -->
    <string name="btnTxtOk">OK</string>
    <string name="btnTxtIrMeli">Ver en Mercado Libre</string>
    <string name="btnTxtVolver">Volver </string>

    <!-- Label Texts -->

    <string name="lblSearch">Busca tus productos</string>
    <string name="lblPromotions">Promociones de diferentes categorias</string>
    <string name="lblCategoryComputacion">Computación</string>
    <string name="lblCategoryCelulares">Celulares y Teléfonos</string>
    <string name="lblCategoryDeportes">Deportes y fitness</string>
    <string name="lblFreeShipping">Envío Gratis</string>
    <string name="lblAcceptsMercadoPago">¡Acepta Mercado Pago!</string>
    <string name="lblConsejosSeguridad">Consejos de seguridad</string>
    <string name="lblConsejo1">- Desde Mercado Libre, Nunca te pediremos contraseñas, PIN o códigos de verificación a través de Whatsapp, telefono, SMS o email.</string>
    <string name="lblConsejo2">- No uses servicios de pago anónimos (por ej. Western Union), ni envíes dinero al exterior.</string>
    <string name="lblResultados">Resultados de la busqueda: </string>

    <!-- Photo Descriptions -->
    <string name="btnSearchDescription">Search Button</string>
    <string name="imgProductDescription">Product Photo</string>

    <!-- Log and Error Texts -->
    <string name="msg_network_error">Internet connection failed, please try again later</string>


    <!-- other texts -->
    <string name="hntSearch">Ej: xiaomi 9s, monitor y mas…</string>

</resources>
