...
        android:padding="@dimen/margin_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearchResult"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblResultadosBusqueda"

        />
...
